--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,9 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
+
+include:
+  - board: seeeduino_xiao_ble
+    shield: mint38se_left
+  - board: seeeduino_xiao_ble
+    shield: mint38se_right
