--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,6 @@
 include:
   - board: seeeduino_xiao_ble
     shield: mint38se_left
+    snippet: zmk-usb-logging
   - board: seeeduino_xiao_ble
     shield: mint38se_right
