--- a/boards/shields/mint38se/mint38se.conf
+++ b/boards/shields/mint38se/mint38se.conf
@@ -7,3 +7,7 @@
 
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
+
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_USB_LOGGING=y
