--- a/build.yaml
+++ b/build.yaml
@@ -24,3 +24,5 @@ include:
     snippet: zmk-usb-logging
   - board: seeeduino_xiao_ble
     shield: mint38se_right
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
