--- a/config/boards/shields/mint38se/mint38se.zmk.yml
+++ b/config/boards/shields/mint38se/mint38se.zmk.yml
@@ -3,8 +3,7 @@ id: mint38se
 name: Mint38SE
 type: shield
 url: https://github.com/DrMint/mint38se
-requires:
-  - seeeduino_xiao_ble
+requires: [seeeduino_xiao_ble]
 features:
   - keys
 siblings:
